# vu-nereliacines-db

./: .gitignore  README.md
antras_lab/: README.md  pyproject.toml
antras_lab/src/: main.py  mongodb_utils.py
ketvirtas_lab/: README.md  pyproject.toml
ketvirtas_lab/src/: main.py  neo4j_utils.py  seed_data.cypher
pirmas_lab/: README.md  fish_shop.py  pyproject.toml  redis_connector.py  validators.py
redis/: redis_connector.py
trecias_lab/: README.md  pyproject.toml  test.py
trecias_lab/src/: cassandra_utils.py  main.py
trecias_lab/src/seed_data/: seed_data.json
