[tool.poetry]
name = "pirmas-lab"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"
packages = [{include = "pirmas_lab"}]

[tool.poetry.dependencies]
python = "^3.8"
inquirerpy = "^0.3.4"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
